# strata

./: Cargo.toml
src/: app.rs  event.rs  main.rs  mock_provider.rs  preview.rs  provider.rs  registry.rs  s3_provider.rs  tree.rs
src/actions/: README.md  context.rs  examples.rs  mod.rs  registry.rs  result.rs  zip.rs
src/ui/: context_selector.rs  file_preview.rs  footer.rs  help.rs  mod.rs  navigator.rs  preview.rs  provider_selector.rs  tree_view.rs
