[package]
name = "s3sh"
version = "0.1.0"
edition = "2024"
description = "A context-aware terminal UI for exploring object stores and artifact repositories"
authors = ["Damon Cortesi"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
