[package]
name = "strata"
version = "0.1.0"
edition = "2024"
description = "A context-aware terminal UI for exploring object stores and artifact repositories"
authors = ["Damon Cortesi"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.67.0"
chrono = "0.4"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
zip = "2.2"
bytes = "1.5"

[dev-dependencies]
once_cell = "1.21.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
